# aternosapi

./: .gitignore  CMakeLists.txt  FindQuickJS.cmake  README.md
include/aternosapi/: Aternos.hpp  Requests.hpp  WebParser.hpp
src/: Aternos.hpp  Encryption.hpp  Javascript.hpp  aternos.cpp  encryption.cpp  javascript.cpp  main.cpp  requests.cpp  webparser.cpp
src/test/: main.cpp
